{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 15,
  "lineage": "7bd9ad5e-6301-8f87-8829-50a151736e83",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "account1_to_account2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].account1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.90.0.0/20",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-049c4395cbe56a7bb1734518823",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-049c4395cbe56a7bb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08931b08dd497792b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163544304364",
            "destination_cidr_block": "10.90.0.0/20",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-049c4395cbe56a7bb"
          },
          "dependencies": [
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "account2_to_account1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].account2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-015eb11135a1e84ca3854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-015eb11135a1e84ca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08931b08dd497792b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913703931",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-015eb11135a1e84ca"
          },
          "dependencies": [
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "account1_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].account1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.90.0.0/20"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1180658538",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-039aa170f6aac3f1a",
            "security_group_rule_id": "sgr-0b9d751d136846ea4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "account2_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].account2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1332956714",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-06ea0865e92179e23",
            "security_group_rule_id": "sgr-0916808ec3fe94f29",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].account1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "auto_accept": false,
            "id": "pcx-08931b08dd497792b",
            "peer_owner_id": "396913703931",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-05b44d48e309cf3b7",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "account1-to-account2-peering"
            },
            "tags_all": {
              "Name": "account1-to-account2-peering"
            },
            "vpc_id": "vpc-0f238901bc3467b62"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer_accept",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].account2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-08931b08dd497792b",
            "peer_owner_id": "163544304364",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0f238901bc3467b62",
            "region": "us-east-1",
            "tags": {
              "Name": "account2-accept-peering"
            },
            "tags_all": {
              "Name": "account2-accept-peering"
            },
            "vpc_id": "vpc-05b44d48e309cf3b7",
            "vpc_peering_connection_id": "pcx-08931b08dd497792b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].account2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-08931b08dd497792b",
            "region": "us-east-1",
            "vpc_peering_connection_id": "pcx-08931b08dd497792b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.peer",
            "aws_vpc_peering_connection_accepter.peer_accept"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].account1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "pcx-08931b08dd497792b",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-08931b08dd497792b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.peer",
            "aws_vpc_peering_connection_accepter.peer_accept"
          ]
        }
      ]
    }
  ]
}